--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "uuid": "^8.3.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
